<resources>
    <string name="app_name">Pomo Remote</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_offline">Offline Mode</string>
    
    <string name="action_start">Start</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_skip">Skip</string>
    <string name="action_reset">Reset</string>
    
    <string name="phase_work">Focus</string>
    <string name="phase_short">Short Break</string>
    <string name="phase_long">Long Break</string>
    
    <string name="pref_laptop_ip">laptop_ip</string>
    <string name="pref_laptop_port">laptop_port</string>
    <string name="pref_vibrate">vibrate_enabled</string>
    <string name="pref_sound">sound_enabled</string>
    
    <string name="settings_title">Settings</string>
    <string name="category_connection">Connection</string>
    <string name="category_notifications">Notifications</string>
    
    <string name="ip_address_title">Laptop IP Address</string>
    <string name="ip_address_summary">Enter the local IP of your laptop (e.g., 192.168.1.100)</string>
    
    <string name="port_title">Port</string>
    <string name="port_summary">Default: 9876</string>
    
    <string name="vibrate_title">Vibrate</string>
    <string name="vibrate_summary">Vibrate when timer completes</string>
    
    <string name="sound_title">Sound</string>
    <string name="sound_summary">Play notification sound when timer completes</string>

    <!-- Timer Settings -->
    <string name="category_timer">Timer</string>
    <string name="pomodoro_duration_title">Focus Duration</string>
    <string name="pomodoro_duration_summary">Duration of focus sessions (minutes)</string>
    <string name="short_break_title">Short Break</string>
    <string name="short_break_summary">Duration of short breaks (minutes)</string>
    <string name="long_break_title">Long Break</string>
    <string name="long_break_summary">Duration of long breaks (minutes)</string>

    <!-- Goals -->
    <string name="category_goals">Goals</string>
    <string name="daily_goal_title">Daily Goal</string>
    <string name="daily_goal_summary">Number of focus sessions per day</string>
</resources>
